--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,2 +1,21 @@
-<h1>Welcome to Home Page,{{name}}</h1>
-<h2>This is the full Home Page</h2>
+<div class ="container">
+    <form action="">
+        <div class="mb-3">
+            <label for="searchMovie" class="form-label">
+                Search Movie
+            </label>
+            <input type="text" class="form-control" name="searchMovie" placeholder="Search Movie">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+    <p>Search results for: <strong>{{seatchTerm}}</strong></p>
+        {%for movie in movies%}
+            <h2>{{movie.title}}</h2>
+            <h3>{{movie.description}}</h3>
+            <img src="{{movie.image.url}}" alt="{{movie.title}}" class="img-fluid">
+            {% if movie.url %}
+                <a href="{{movie.url}}" class="btn btn-secondary">Watch Now</a>
+            {% endif %}
+        {% endfor %}
+    <br/>
+</div>
